conductor-tui/tests/snapshots/tui_snapshots__snap_dashboard_populated.snap
---
source: conductor-tui/tests/tui_snapshots.rs
assertion_line: 221
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (2 active) ──────────────────────────────────────────────┐┌ All Workflow Runs (H: show history, V: ┐"
"│● my-app ⚠ no source                                                        ││                                        │"
"│  ├ feat-123-add-login                                                      ││                                        │"
"│  └ fix-456-null-ptr                                                        ││                                        │"
"│○ backend-api ⚠ no source                                                   ││                                        │"
"│  └ [merged]  feat-789-auth                                                 ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            │└────────────────────────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  [S]:settings  q:quit                                                   "
