conductor-tui/tests/snapshots/tui_snapshots__snap_graph_view.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌────────────────────┐        ┌────────────────────┐                         ││                                        │"
"│ #101 Setup CI pipel│⠒⠒⠐⠒⠒⠒⠐⠒│ #102 Add deployment│                         ││                                        │"
"└────────────────────┘        └────────────────────┘                         ││                                        │"
"│                                                                            ││                                        │"
"┌────────────────────┐        ┌────────────────────┐                         ││                                        │"
"│ #103 Auth epic     │⠒⠒⠒⠒⠒⠒⠒⠒│ #104 OAuth login fl│                         ││                                        │"
"└────────────────────┘        └────────────────────┘                         ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            │└────────────────────────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
