conductor-tui/tests/snapshots/tui_snapshots__snap_modal_branch_picker.snap
---
source: conductor-tui/tests/tui_snapshots.rs
assertion_line: 517
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Runs (H: show history) ───┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                             ┌ Branch Picker ───────────────────────────────────────────┐                             │"
"│                             │                                                          │                             │"
"│                             │  Target branch:                                          │                             │"
"│                             │                                                          │                             │"
"│                             │  ▸ 1. default branch                                     │                             │"
"│                             │    2. │ ├ feat/auth-flow (1 worktree, 1 ticket)          │                             │"
"│                             │    3.   └ feat/dashboard (2 worktrees)                   │                             │"
"│                             │                                                          │                             │"
"│                             │  1-9 select  Enter confirm  Esc cancel                   │                             │"
"│                             └──────────────────────────────────────────────────────────┘                             │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            │└────────────────────────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  q:quit                                                                 "
