conductor-tui/tests/snapshots/tui_snapshots__snap_modal_confirm.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                             ┌ Delete worktree ─────────────────────────────────────────┐                             │"
"│                             │                                                          │─────────────────────────────┘"
"│                             │Are you sure you want to delete feat-123-add-login?       │ow Runs (Space=expand/collaps┐"
"│                             │                                                          │                             │"
"│                             │  y/Enter = confirm    n = cancel                         │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             └──────────────────────────────────────────────────────────┘                             │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  q:quit                                                                 "
