conductor-tui/tests/snapshots/tui_snapshots__snap_modal_error.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Runs (H: show history) ───┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                       ┌ Error ───────────────────────────────────────────────────────────────┐                       │"
"│                       │                                                                      │                       │"
"│                       │Something went wrong: connection refused                              │                       │"
"│                       │                                                                      │                       │"
"│                       │  y: copy  Esc/Enter: dismiss                                         │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       └──────────────────────────────────────────────────────────────────────┘                       │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            │└────────────────────────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  [S]:settings  q:quit                                                   "
