conductor-tui/tests/snapshots/tui_snapshots__snap_modal_form.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Runs (H: show history) ───┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                       ┌ Register Repo ───────────────────────────────────────────────────────┐                       │"
"│                       │                                                                      │                       │"
"│                       │  Remote URL*                                                         │                       │"
"│                       │  > https://github.com/user/my-app.git_                               │                       │"
"│                       │                                                                      │                       │"
"│                       │  Slug*                                                               │                       │"
"│                       │    my-app                                                            │                       │"
"│                       │                                                                      │                       │"
"│                       │  Local Path*                                                         │                       │"
"│                       │    /home/user/my-app                                                 │                       │"
"│                       │                                                                      │                       │"
"│                       │  Tab next field  Enter submit  Esc cancel                            │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       └──────────────────────────────────────────────────────────────────────┘                       │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            │└────────────────────────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  [S]:settings  q:quit                                                   "
